python-werkzeug: update to 3.1.3

--- a/mingw-w64-python-werkzeug/PKGBUILD
+++ b/mingw-w64-python-werkzeug/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=werkzeug
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.0.4
-pkgrel=2
+pkgver=3.1.3
+pkgrel=1
 pkgdesc='Swiss Army knife of Python web development (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,7 +12,8 @@ msys2_references=(
   'pypi: Werkzeug'
   "cpe: cpe:/a:palletsprojects:werkzeug"
 )
-url="https://werkzeug.palletsprojects.com/"
+msys2_repository_url='https://github.com/pallets/werkzeug/'
+url='https://werkzeug.palletsprojects.com/'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-markupsafe")
@@ -20,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('34f2371506b250df4d4f84bfe7b0921e4762525762bbd936614909fe25cd7306')
+sha256sums=('60723ce945c19328679790e3282cc758aa4a6040e4bb330f53d30fa546d44746')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
