--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=crt
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r446.ga2d19218d
+pkgver=12.0.0.r458.g03d8a40f5
 pkgrel=1
-_commit='a2d19218ddeff0ac61e8a38aada393c06c263b99'
+_commit='03d8a40f57649fbb773f1cdbe3a760f5e0943e76'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,7 +22,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('71f6d0e2522447456e77d7a631d8862ccf52024ffcc4c251818da4a0057e82fa')
+sha256sums=('cda9858cf758f752306330f66840631de953f11d0e74836ea3b7892a2743db6f')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
