gnuplot: update to 6.0.2

--- a/mingw-w64-gnuplot/PKGBUILD
+++ b/mingw-w64-gnuplot/PKGBUILD
@@ -3,11 +3,12 @@
 # This package cannot be build with installed libgdiplus package 
 # as it doesnt contain reference for GdipFontFamilyCachedGenericSansSerif
 
-_realname=gnuplot
 _wx_basever=3.2
+
+_realname=gnuplot
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=6.0.1
+pkgver=6.0.2
 pkgrel=1
 pkgdesc="Plotting package which outputs to PostScript, PNG, GIF, and others (mingw-w64)"
 arch=('any')
@@ -22,24 +23,27 @@ msys2_documentation_url='http://www.gnuplot.info/documentation.html'
 url='http://www.gnuplot.info/'
 license=('spdx:gnuplot')
 depends=("${MINGW_PACKAGE_PREFIX}-cairo"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-gnutls"
-         "${MINGW_PACKAGE_PREFIX}-libcaca"
-         "${MINGW_PACKAGE_PREFIX}-libcerf"
          "${MINGW_PACKAGE_PREFIX}-libgd"
+         $([[ ${CARCH} == i686 ]] || echo \
+           "${MINGW_PACKAGE_PREFIX}-libcaca" \
+           "${MINGW_PACKAGE_PREFIX}-libcerf" \
+           "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-msw-libs")
+         "${MINGW_PACKAGE_PREFIX}-libwebp"
          "${MINGW_PACKAGE_PREFIX}-pango"
-         "${MINGW_PACKAGE_PREFIX}-readline"
-         "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-msw-libs")
+         "${MINGW_PACKAGE_PREFIX}-readline")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-autotools"
-  "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-msw"
+  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-msw")
 )
 source=("https://downloads.sourceforge.net/sourceforge/${_realname}/${_realname}-${pkgver}.tar.gz"
         "01-gnuplot.patch"
         "02-wxwidgets-3.2.patch"
         "03-fix-build-doc2web.patch")
-sha256sums=('e85a660c1a2a1808ff24f7e69981ffcbac66a45c9dcf711b65610b26ea71379a'
+sha256sums=('f68a3b0bbb7bbbb437649674106d94522c00bf2f285cce0c19c3180b1ee7e738'
             '9b8af2d8eb24f0e8048a388949d8905a79b69208cf7eadd34a763a0c582b8f9e'
             '06f8076446c4174d5972a252ae18a7f672fd25f4131b3dd1d65399c1f3b52697'
             '427fa4d801d7c9117526790ee082af91c472c551d4cd4b45078efe856f6a92f9')
@@ -67,26 +71,34 @@ prepare() {
 build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
 
+  declare -a _extra_config
+  if [[ ${CARCH} == i686 ]]; then
+    _extra_config+=("--without-libcerf" "--disable-wxwidgets")
+  else
+    _extra_config+=("--with-caca")
+  fi
+
   ../${_realname}-${pkgver}/configure \
       --prefix=${MINGW_PREFIX} \
       --libexecdir=${MINGW_PREFIX}/bin \
       --build=${MINGW_CHOST} \
       --without-lua \
       --without-latex \
-      --with-caca \
       --with-qt=no \
       --with-readline=gnu \
       --with-bitmap-terminals \
       --disable-x11-mbfonts \
       --disable-x11-external \
-      --disable-raise-console
+      --disable-raise-console \
+      "${_extra_config[@]}"
 
-  make pkglibexecdir=${MINGW_PREFIX}/bin
+  make pkglibexecdir=${MINGW_PREFIX}/bin || make -j1 pkglibexecdir=${MINGW_PREFIX}/bin 
 }
 
 package() {
   cd "${srcdir}"/build-${MSYSTEM}
   make install pkglibexecdir=${MINGW_PREFIX}/bin DESTDIR="${pkgdir}"
   
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/Copyright" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/Copyright \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
