--- a/mingw-w64-rapidfuzz-cpp/PKGBUILD
+++ b/mingw-w64-rapidfuzz-cpp/PKGBUILD
@@ -3,13 +3,13 @@
 _realname=rapidfuzz-cpp
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.0.2
+pkgver=3.2.0
 pkgrel=1
 pkgdesc="Rapid fuzzy string matching in C++ using the Levenshtein Distance (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://maxbachmann.github.io/rapidfuzz-cpp/'
-msys2_repository_url='https://github.com/maxbachmann/rapidfuzz-cpp/'
+url='https://rapidfuzz.github.io/rapidfuzz-cpp/'
+msys2_repository_url='https://github.com/rapidfuzz/rapidfuzz-cpp/'
 msys2_references=(
   'archlinux: rapidfuzz-cpp'
 )
@@ -17,8 +17,8 @@ license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("https://github.com/maxbachmann/rapidfuzz-cpp/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4fddce5c0368e78bd604c6b820e6be248d669754715e39b4a8a281bda4c06de1')
+source=("https://github.com/rapidfuzz/rapidfuzz-cpp/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('45504e1091814017fb16e69b9f9494233043eee6a8a17ee7c327ffde3b0cc412')
 
 build() {
   declare -a _extra_config
