--- a/mingw-w64-spectra/PKGBUILD
+++ b/mingw-w64-spectra/PKGBUILD
@@ -3,22 +3,22 @@
 _realname=spectra
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.0.1
+pkgver=1.1.0
 pkgrel=1
 pkgdesc="A header-only C++ library for large scale eigenvalue problems (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://github.com/yixuan/spectra/'
 url='https://spectralib.org/'
-license=('MPL2')
+license=('spdx:MPL-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-eigen3")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("${_realname}-${pkgver}.tar.gz"::"https://codeload.github.com/yixuan/spectra/tar.gz/refs/tags/v${pkgver}")
-sha256sums=('919e3fbc8c539a321fd5a0766966922b7637cc52eb50a969241a997c733789f3')
+sha256sums=('d29671e3d1b8036728933cadfddb05668a3cd6133331e91fc4535a9b85bedc79')
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   declare -a extra_config
