--- a/mingw-w64-seacas/PKGBUILD
+++ b/mingw-w64-seacas/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2024.08.15
 _releases=${pkgver//./-}
-pkgrel=1
+pkgrel=2
 pkgdesc="The Sandia Engineering Analysis Code Access System (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,6 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python")
+provides=("${MINGW_PACKAGE_PREFIX}-libexodus"
 source=("https://github.com/gsjaardema/seacas/archive/v${_releases}/${_realname}-${pkgver}.tar.gz"
         "0001-cmake-add-libs.patch"
         "0002-cmake-findHDF5.patch")
