--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.166.2
+pkgver=0.167.1
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -42,11 +42,15 @@ fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch")
-sha256sums=('3642d33517b6480ae67e6fb9ec97abfa1dc57cd015a09e1d06d613a7c3a9fd99'
+        "zstd-sys-remove-statik.patch"
+        "https://github.com/zed-industries/zed/commit/298b9df589c2be910676b59cb8213f98a8396fed.patch"
+        "https://github.com/zed-industries/zed/commit/95911aaa1450b6e613139298b676e15cdb928ec1.patch")
+sha256sums=('b8e0964dd69eacec029d2f9ef665c2a55ff347c69f70206d89d3e6a1b3ea92ff'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
+            '42bee2aa82ba73a4939b028c800529ad005607a4abdf372a348bf02851034b8c'
+            'acff5a34927c4fb611e9f866fd2d339a737aecd1e2594eb4ff47e30b324b24ac')
 
 prepare() {
   cd "${_realname}"
@@ -55,6 +59,10 @@ prepare() {
 
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
+  # backport https://github.com/zed-industries/zed/pull/20853
+  patch -Np1 -i "../298b9df589c2be910676b59cb8213f98a8396fed.patch"
+  # backport https://github.com/zed-industries/zed/pull/22414 (requires previous patch)
+  patch -Np1 -i "../95911aaa1450b6e613139298b676e15cdb928ec1.patch"
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # use patched *-sys crates
