--- a/mingw-w64-jj/PKGBUILD
+++ b/mingw-w64-jj/PKGBUILD
@@ -4,13 +4,13 @@ _realname=jj
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=0.24.0
+pkgver=0.25.0
 pkgrel=1
 pkgdesc="Jujutsu (an experimental VCS) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/martinvonz/jj"
-msys2_documentation_url="https://martinvonz.github.io/jj/v${pkgver}"
+url="https://github.com/jj-vcs/jj"
+msys2_documentation_url="https://jj-vcs.github.io/jj/latest"
 msys2_references=(
   'archlinux: jujutsu'
   'purl: pkg:cargo/jj-cli'
@@ -18,6 +18,7 @@ msys2_references=(
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              'git')
 depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
@@ -25,25 +26,20 @@ depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 source=("git+${url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
-        "zstd-sys-remove-statik.patch"
-        "jj-remove-unneded-features.patch")
-sha256sums=('f08853a713f26480a8ec7dee536cca5ae2fd67c269f64530c0c3e274743c330c'
+        "zstd-sys-remove-statik.patch")
+sha256sums=('81a4fba33ef41385f489eb2ddec66deaa7e04df13a79f264c924666551c727c4'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
-            '8917b1fbb95021d46f61f2067bcd723657fda781f0a063739f168cd9fb68e555'
-            '785cb38d2813adb4868868ae17ba257859026170e4a621e2761fab901d5eb982')
+            '8917b1fbb95021d46f61f2067bcd723657fda781f0a063739f168cd9fb68e555')
 
 _env() {
   export OPENSSL_NO_VENDOR=1
   export LIBGIT2_NO_VENDOR=1
-  export PKG_CONFIG_ALL_DYNAMIC=1
   export ZSTD_SYS_USE_PKG_CONFIG=1
   export LIBSSH2_SYS_USE_PKG_CONFIG=1
 }
 
 prepare() {
   cd "${_realname}"
-
-  patch -Np1 -i "${srcdir}/jj-remove-unneded-features.patch"
 
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "${srcdir}/zstd-sys-remove-statik.patch"
   cat >> Cargo.toml <<END
@@ -64,7 +60,7 @@ build() {
     -p jj-cli \
     --release \
     --frozen \
-    --all-features
+    --features packaging
 }
 
 check() {
@@ -75,7 +71,7 @@ check() {
     -p jj-cli \
     --release \
     --frozen \
-    --all-features
+    --features packaging
 }
 
 package_jj() {
@@ -88,7 +84,7 @@ package_jj() {
     --no-track \
     --path cli \
     --root "${pkgdir}${MINGW_PREFIX}" \
-    --all-features
+    --features packaging
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 
