--- a/mingw-w64-pyside6/PKGBUILD
+++ b/mingw-w64-pyside6/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname=(${MINGW_PACKAGE_PREFIX}-shiboken6
          ${MINGW_PACKAGE_PREFIX}-${_realname}
          ${MINGW_PACKAGE_PREFIX}-${_realname}-tools)
-pkgver=6.8.0.2
-pkgrel=2
+pkgver=6.8.1.1
+pkgrel=1
 pkgdesc="Enables the use of Qt6 APIs in Python applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -51,16 +51,16 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets"
              "${MINGW_PACKAGE_PREFIX}-vulkan-headers")
-_pkgfn=pyside-setup-everywhere-src-${pkgver%.*}
-source=(https://download.qt.io/official_releases/QtForPython/pyside6/PySide6-$pkgver-src/${_pkgfn}.tar.xz
+_pkgfn=pyside-setup-everywhere-src-${pkgver}
+source=(https://download.qt.io/official_releases/QtForPython/pyside6/PySide6-${pkgver%.*}-src/${_pkgfn}.tar.xz
         001-fix-building-on-mingw.patch
         002-fix-build-qtexampleicons.patch)
-sha256sums=('1a1a219a8f327e340d258275fad3a9f261b8f04bc57041747e73dd6ad252b4e1'
+sha256sums=('e1f198f0a9f6f0e694e3b44406166834e27cffa3f23c5a439c934e5c4faba468'
             '5f71b618e0ad687e9282fa4b8c3815beaf69b78666516bfce57cb039822f4ac6'
             'ad762d906e5e736b87e8fe92efd42045fe51206e6b6845e37d298a15a53ccfa3')
 
 prepare() {
-  cd "${srcdir}"/${_pkgfn}
+  cd "${srcdir}"/${_pkgfn%.*}
   patch -p1 -i "${srcdir}"/001-fix-building-on-mingw.patch
   patch -p1 -i "${srcdir}"/002-fix-build-qtexampleicons.patch
 }
@@ -88,7 +88,7 @@ build() {
     -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
     -DNUMPY_INCLUDE_DIR=${MINGW_PREFIX}/include/python${_pyver}/numpy/_core/include \
     -DSKIP_MODULES=DBus \
-    ../${_pkgfn}
+    ../${_pkgfn%.*}
 
   PYTHONPATH="${srcdir}"/build-${MSYSTEM}/sources \
   ${MINGW_PREFIX}/bin/cmake --build .
@@ -104,7 +104,8 @@ package_shiboken6() {
 
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install build-${MSYSTEM}/sources/shiboken6
 
-  install -Dm644 ${_pkgfn}/sources/shiboken6/COPYING "$pkgdir"${MINGW_PREFIX}/share/licenses/shiboken6/LICENSE
+  install -Dm644 ${_pkgfn%.*}/sources/shiboken6/COPYING \
+    "$pkgdir"${MINGW_PREFIX}/share/licenses/shiboken6/LICENSE
 
   # Fix *.pc files
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
@@ -116,7 +117,7 @@ package_shiboken6() {
   done
 
   # Install egg-info
-  cd "${srcdir}"/${_pkgfn}
+  cd "${srcdir}"/${_pkgfn%.*}
   ${MINGW_PREFIX}/bin/python setup.py egg_info --build-type=shiboken6
   ${MINGW_PREFIX}/bin/python setup.py egg_info --build-type=shiboken6-generator
   _pythonpath=`${MINGW_PREFIX}/bin/python -c "from sysconfig import get_path; print(get_path('platlib'))"`
@@ -156,11 +157,12 @@ package_pyside6() {
 
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install build-${MSYSTEM}/sources/pyside6
 
-  install -Dm644 ${_pkgfn}/sources/pyside6/COPYING "$pkgdir"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 ${_pkgfn%.*}/sources/pyside6/COPYING \
+    "$pkgdir"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 
   _pythonpath=`${MINGW_PREFIX}/bin/python -c "from sysconfig import get_path; print(get_path('platlib'))"`
   # Install egg-info
-  cd "${srcdir}"/${_pkgfn}
+  cd "${srcdir}"/${_pkgfn%.*}
   ${MINGW_PREFIX}/bin/python setup.py egg_info --build-type=pyside6
   cp -r PySide6.egg-info "$pkgdir"/$(cygpath ${_pythonpath})
   # Install pyi files
