--- a/mingw-w64-pyside6/PKGBUILD
+++ b/mingw-w64-pyside6/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname=(${MINGW_PACKAGE_PREFIX}-shiboken6
          ${MINGW_PACKAGE_PREFIX}-${_realname}
          ${MINGW_PACKAGE_PREFIX}-${_realname}-tools)
-pkgver=6.8.0.2
-pkgrel=2
+pkgver=6.8.1.1
+pkgrel=1
 pkgdesc="Enables the use of Qt6 APIs in Python applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -52,10 +52,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets"
              "${MINGW_PACKAGE_PREFIX}-vulkan-headers")
 _pkgfn=pyside-setup-everywhere-src-${pkgver%.*}
-source=(https://download.qt.io/official_releases/QtForPython/pyside6/PySide6-$pkgver-src/${_pkgfn}.tar.xz
+source=(https://download.qt.io/official_releases/QtForPython/pyside6/PySide6-${pkgver%.*}-src/pyside-setup-everywhere-src-${pkgver}.tar.xz
         001-fix-building-on-mingw.patch
         002-fix-build-qtexampleicons.patch)
-sha256sums=('1a1a219a8f327e340d258275fad3a9f261b8f04bc57041747e73dd6ad252b4e1'
+sha256sums=('e1f198f0a9f6f0e694e3b44406166834e27cffa3f23c5a439c934e5c4faba468'
             '5f71b618e0ad687e9282fa4b8c3815beaf69b78666516bfce57cb039822f4ac6'
             'ad762d906e5e736b87e8fe92efd42045fe51206e6b6845e37d298a15a53ccfa3')
 
